--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,8 @@ dependencies {
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.14.2'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
+    kapt 'com.github.bumptech.glide:compiler:4.14.2'
+
 
 //    cameraX
 
