--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,8 @@ plugins {
     id 'com.android.application' version '7.1.0' apply false
     id 'com.android.library' version '7.1.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.3.72'
+    id 'org.jetbrains.kotlin.jvm' version '1.5.0' apply false
 }
 
 task clean(type: Delete) {
