--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,7 @@
 buildscript {
+    ext {
+        compose_ui_version = '1.4.0'
+    }
     dependencies {
         classpath 'com.google.gms:google-services:4.3.14'
         classpath 'androidx.navigation:navigation-safe-args-gradle-plugin:2.5.3'
@@ -8,7 +11,7 @@ buildscript {
 plugins {
     id 'com.android.application' version '7.1.0' apply false
     id 'com.android.library' version '7.1.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+    id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
     id 'org.jetbrains.kotlin.plugin.serialization' version '1.3.72'
     id 'org.jetbrains.kotlin.jvm' version '1.5.0' apply false
     id 'com.google.dagger.hilt.android' version '2.44' apply false
