--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,7 +54,6 @@ android {
         }
     }
 }
-
 dependencies {
 
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.0"
@@ -121,6 +120,9 @@ dependencies {
 
     implementation "androidx.camera:camera-view:${camerax_version}"
     implementation "androidx.camera:camera-extensions:${camerax_version}"
+
+//    convert to pdf
+    implementation 'com.github.wwdablu:SimplyPDF:2.0.0'
 
 //    json parsing
     implementation 'com.google.code.gson:gson:2.8.6'
